--- a/translations/kangyur/placeholders/091-041_toh644,882-the_sutra_of_the_eight_mandalas.xml
+++ b/translations/kangyur/placeholders/091-041_toh644,882-the_sutra_of_the_eight_mandalas.xml
@@ -5,25 +5,26 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dkyil 'khor brgyad pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">aṣṭamaṇḍalakasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Aṣṭamaṇḍalakasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Eight Maṇḍalas</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dkyil 'khor brgyad pa zhes bya ba theg pa chen po'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryāṣṭamaṇḍalakanāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">aṣṭamaṇḍalakamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryāṣṭamaṇḍalakanāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Aṣṭamaṇḍalakamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dkyil 'khor brgyad pa zhes bya ba'i the pa chen po'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryāṣṭamaṇḍalakanāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-59"/>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-356">Khenchen Nyima Gyaltsen</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-358">Ven. Konchog Tenzin (Mark Riege)</author>
-                <author role="translatorEng" ref="contributors.xml#person-19">Virginia Blum</author>
-                <author role="translatorEng" ref="contributors.xml#person-357">Ven. Yeshe Metog (Claudia Jürgens)</author>
-                <consultant role="advisor" ref="contributors.xml#person-22">Meghan Howard</consultant>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryāṣṭamaṇḍalakanāmamahāyānasūtra</title>
+                <author role="translatorMain" xml:id="UT22084-091-041-1"/>
+                <consultant role="dharmaMaster" xml:id="UT22084-091-041-2">Khenchen Nyima Gyaltsen</consultant>
+                <author role="translatorEng" xml:id="UT22084-091-041-3">Ven. Konchog Tenzin (Mark Riege)</author>
+                <author role="translatorEng" xml:id="UT22084-091-041-4">Virginia Blum</author>
+                <author role="translatorEng" xml:id="UT22084-091-041-5">Ven. Yeshe Metog (Claudia Jürgens)</author>
+                <consultant role="advisor" xml:id="UT22084-091-041-6">Meghan Howard</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-041"/>
                 <date/>
             </publicationStmt>
@@ -41,21 +42,39 @@
                     <ref>Toh 882</ref>
                     <biblScope>vol.100, ff.122r-123r(pp.243-245)</biblScope>
                     <location work="UT4CZ5369" count-pages="3">
-                        <volume number="100" start-page="243" end-page="245"/>
+                        <volume number="101" start-page="241" end-page="243"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12644" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-01-11T13:57:05.271Z" user="admin">11/01/2021 13:57:05</note>
-    <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:57:47.143Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:57:47.143Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:57:11.761Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T09:57:11.761Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-11T13:56:19.934Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T13:57:00.891Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-10-02T13:57:47.143Z" type="translation-status" status="4" xml:id="UT22084-091-041-7">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-02T13:57:47.143Z" type="text-version" status="0.0.1" xml:id="UT22084-091-041-8">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-30T09:57:11.761Z" type="translation-status" status="3" xml:id="UT22084-091-041-9">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-30T09:57:11.761Z" type="text-version" status="0.0.2" xml:id="UT22084-091-041-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-11T13:56:19.934Z" type="text-version" status="0.0.3" xml:id="UT22084-091-041-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-11T13:57:00.891Z" type="text-version" status="0.0.4" xml:id="UT22084-091-041-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-091-041-13">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-04-02T13:44:21.869Z" type="text-version" status="0.0.6" xml:id="UT22084-091-041-14">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
