--- a/translations/kangyur/translations/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
+++ b/translations/kangyur/translations/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-025-402">John Canti</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.3 <date>2024</date>
+                <edition>v 1.1.1 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -187,6 +187,9 @@
                 <change who="#konchog" when="2024-03-29T15:49:59.294Z" type="text-version" status="1.0.3" xml:id="UT22084-034-025-1226">
                     <desc>Several fixes through different sections.</desc>
                 </change>
+                <change who="#john" when="2024-04-04T19:15:27.87Z" type="text-version" status="1.1.1" xml:id="UT22084-034-025-1227">
+                    <desc>Added a paragraph to intro to acknowledge the nature of the passage on wives' disobedience.</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -335,13 +338,29 @@
               Bhikkhu Bodhi) are combined with “the five setbacks in the training” (as translated by
               Bhikkhu Bodhi; <foreign xml:lang="Pi-Ltn" type="term">sikkhādubbalyāni</foreign>
               literally means “weaknesses in the five trainings”). For English translations, see
-              Bhikkhu Bodhi 2012, pp. 1326–27 and 1330–31.</note> These considerations suggest two
+              Bhikkhu Bodhi 2012, pp. 1326–27 and 1330–31.</note> </p>
+          <milestone unit="chunk" xml:id="UT22084-034-025-1072"/>
+          <p tid="135">These considerations suggest two
             possible conclusions. One is that the fourteenth-century Tibetan translation of <title xml:lang="en">The Benefits of the Five Precepts</title> is based on a
-            no-longer-extant, or perhaps paracanonical, Pali original. The other is that the canonical
-            sutta that now constitutes the first part of <title xml:lang="en">The Benefits of the
-              Five Precepts</title> was augmented, perhaps orally by Ānandaśrī.</p>
+            no-longer-extant, or perhaps paracanonical, Pali original. The other is that the second part of this text, 
+            whose first part is a translation of a canonical version of <title xml:lang="en">The Benefits of the
+              Five Precepts</title>, is an augmented or commentarial section added, perhaps from an oral tradition, by Ānandaśrī.</p>
+          <milestone unit="chunk" xml:id="UT22084-034-025-1073"/>
+          <p tid="136">It is in this regard that mention should be made of a short passage<note place="end" xml:id="UT22084-034-025-1183">See 
+            <ptr target="#UT22084-034-025-178"/>.</note> within the second part that is (as far as we
+            can determine) unique to this text, and that many readers—even those fortified with
+            a strong dose of historical and cultural relativism—will find strikingly discordant with present-day values. 
+            It is an extra description, seemingly interposed as a supplement to the section on sexual misconduct,
+            that places a woman’s lack of subservience and obedience to her husband in a stark moral light 
+            with descriptions of its own specific fruition in the experience of the hell realms. 
+            Comparable but more general descriptions of the violent sufferings experienced by hell beings as the fruition
+            of their past negative actions are, of course, a feature of a number of canonical works, and 
+            in the later literature have their place in enumerations of the sufferings of saṃsāra; they are never 
+            pleasant reading. But this particular passage stands out as an outlier, and it would seem justifiable that its
+            canonical status might at least be questioned.</p>
+          <lb/>
           <milestone unit="chunk" xml:id="UT22084-034-025-72"/>
-          <p tid="16">To our knowledge, this is the first full English translation of the sūtra to
+          <p tid="137">To our knowledge, this is the first full English translation of the sūtra to
             be published. A full translation into French was published by Léon Henri Feer in 1881,
             and partial English translations can be found in Cabezón 2017.<note place="end" xml:id="UT22084-034-025-73"> See Cabezón 2017, pp. 44–45, 315–16, 486, and 487.</note>
           </p>
@@ -881,10 +900,9 @@
             happy rebirth-destiny, in heaven, in a deva world.</p>
           <milestone unit="chunk" xml:id="UT22084-034-025-176"/>
           <lg tid="76">
-            <l>“Any man who is driven by lust,</l>
+            <l>“Any man who is driven by desire,</l>
             <l>In rebirth after rebirth,</l>
-            <l>Should not go after other women</l>
-            <l>But cleanse his mental stain instead.”<note place="end" xml:id="UT22084-034-025-177">
+            <l>Should not go after other women<note place="end" xml:id="UT22084-034-025-177">
                 Or “the wives of others”; cf. Feer’s translation (1883, p. 238):<lg>
                   <l>“L’homme qui a des désirs</l>
                   <l>doit, de naissance en naissance,</l>
@@ -893,6 +911,7 @@
                 </lg>
                             </note>
                         </l>
+            <l>But cleanse his mental stain instead.”</l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-034-025-178"/>
           <p tid="77">“Any woman who<note place="end" xml:id="UT22084-034-025-179"> Following S and
@@ -914,14 +933,15 @@
             worm, born in the lips at the place where the weapon struck the tip of the tongue, will
             eat the tongue. Even after it eats only a little, she will be unable to speak.
             Similarly, she will be cooked there for many thousands of years, <ref cRef="F.274.b" type="folio" xml:id="UT22084-034-025-381"/> and after being cooked there she will fall
-            again into a great hell.” </p>
+            again into a great hell.”<note place="end" xml:id="UT22084-034-025-1183">On this passage, 
+              see Introduction <ptr target="#UT22084-034-025-1072"/>..</note> </p>
           <p tid="78">For that reason, the Bhagavān has said: </p>
           <milestone unit="chunk" xml:id="UT22084-034-025-183"/>
           <lg tid="79">
             <l>“Any woman who desires a man, </l>
+            <l>In rebirth after rebirth,</l>
             <l>Like a goddess to a god,</l>
-            <l>Should never, in rebirth after rebirth,</l>
-            <l>Renounce her husband.</l>
+            <l>Should never abandon her husband.”</l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-034-025-184"/>
           <p tid="80">“Lying, in turn, leads to rebirth in the Black Thread Hell. There, the
