--- a/translations/kangyur/placeholders/077-005_toh364-the_essence_of_the_tantra_of_kalacakra.xml
+++ b/translations/kangyur/placeholders/077-005_toh364-the_essence_of_the_tantra_of_kalacakra.xml
@@ -12,11 +12,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Śrīkālacakragarbhanāmatantra</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="4"/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-077-005"/>
             </publicationStmt>
             <sourceDesc>
@@ -41,6 +41,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-03-26T08:03:09.669Z" type="text-version" status="0.0.1" xml:id="UT22084-077-005-3">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-08T08:09:50.84Z" type="translation-status" status="3" xml:id="UT22084-077-005-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-08T08:09:50.84Z" type="text-version" status="0.0.2" xml:id="UT22084-077-005-5">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
