--- a/translations/kangyur/placeholders/044-010_toh89-the_sutra_of_aksayamatis_questions.xml
+++ b/translations/kangyur/placeholders/044-010_toh89-the_sutra_of_aksayamatis_questions.xml
@@ -18,12 +18,12 @@
                 <editor role="reviser" xml:id="UT22084-044-010-7">Per Sørensen</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-044-010"/>
                 <date/>
             </publicationStmt>
@@ -51,6 +51,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-044-010-11">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-08T12:33:14.108Z" type="translation-status" status="2.h" xml:id="UT22084-044-010-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-08T12:33:14.108Z" type="text-version" status="0.0.5" xml:id="UT22084-044-010-13">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
