--- a/translations/kangyur/placeholders/001-003_toh1-3-chapter_3_on_the_relaxation_of_restrictions.xml
+++ b/translations/kangyur/placeholders/001-003_toh1-3-chapter_3_on_the_relaxation_of_restrictions.xml
@@ -18,12 +18,12 @@
                 <editor role="copyEditor" xml:id="UT22084-001-003-36">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.6 <date>2024</date>
+                <edition>v 0.1.7 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-001-003"/>
                 <date/>
             </publicationStmt>
@@ -72,6 +72,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-13T11:31:38.998Z" type="text-version" status="0.1.6" xml:id="UT22084-001-003-37">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-09T09:43:04.694Z" type="translation-status" status="2.d" xml:id="UT22084-001-003-38">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-09T09:43:04.694Z" type="text-version" status="0.1.7" xml:id="UT22084-001-003-39">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
