--- a/translations/kangyur/placeholders/091-021_toh624,1017-the_incantation_for_assuaging_epidemic_fevers.xml
+++ b/translations/kangyur/placeholders/091-021_toh624,1017-the_incantation_for_assuaging_epidemic_fevers.xml
@@ -11,7 +11,7 @@
                 <author role="translatorEng" xml:id="UT22084-091-021-2">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -33,7 +33,7 @@
                     <ref>Toh 1017</ref>
                     <biblScope>vol.101, ff.181r-181r(pp.361-361)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="361" end-page="361"/>
+                        <volume number="102" start-page="361" end-page="361"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12780" work="W22084"/>
@@ -52,6 +52,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-091-021-6">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-03T06:02:41.402Z" type="text-version" status="0.0.4" xml:id="UT22084-091-021-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
