--- a/translations/kangyur/placeholders/091-023_toh626,1019-the_incantation_for_assuaging_smallpox.xml
+++ b/translations/kangyur/placeholders/091-023_toh626,1019-the_incantation_for_assuaging_smallpox.xml
@@ -13,7 +13,7 @@
                 <author role="translatorEng" xml:id="UT22084-091-023-2">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +35,7 @@
                     <ref>Toh 1019</ref>
                     <biblScope>vol.101, ff.181v-181v(pp.362-362)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="362" end-page="362"/>
+                        <volume number="102" start-page="362" end-page="362"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12782" work="W22084"/>
@@ -54,6 +54,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-091-023-6">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-03T06:17:42.063Z" type="text-version" status="0.0.4" xml:id="UT22084-091-023-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
