--- a/translations/kangyur/translations/072-021_toh321-the_verses_on_circumambulating_shrines.xml
+++ b/translations/kangyur/translations/072-021_toh321-the_verses_on_circumambulating_shrines.xml
@@ -21,13 +21,13 @@
         <editor role="finalReviewer" xml:id="UT22084-072-021-300">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.22 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
         <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit initiative to translate all the Buddha’s words into modern languages, and to make them available to everyone. </publisher>
-        <availability status="2">
+        <availability status="1.a">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND (Attribution - Non-commercial - No-derivatives) 3.0 copyright. It may be copied or printed for fair use, but only with full
@@ -36,7 +36,7 @@
         </availability>
         <idno xml:id="UT22084-072-021"/>
         <note>An early mistake in the assigning of UT numbers within the 84000 project means that these ids diverge slightly from the standard logic.</note>
-        <date>2024-02-09</date>
+        <date>2024-07-04</date>
       </publicationStmt>
       <sourceDesc>
         <bibl key="toh321" type="text">
@@ -146,6 +146,12 @@
         </change>
                 <change who="#konchog" when="2024-06-29T21:44:22.594Z" type="text-version" status="0.0.22" xml:id="UT22084-072-021-304">
                     <desc>Many fixes throughout all sections, following a request from Andreas to proofread.</desc>
+                </change>
+                <change who="#sameer" when="2024-07-04T07:45:52.866Z" type="translation-status" status="1.a" xml:id="UT22084-072-021-305">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#sameer" when="2024-07-04T07:45:52.866Z" type="text-version" status="1.0.0" xml:id="UT22084-072-021-306">
+                    <desc>First published version.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
