--- a/translations/kangyur/placeholders/061-008_toh188-the_sutra_of_the_prophecy_by_dipamkara.xml
+++ b/translations/kangyur/placeholders/061-008_toh188-the_sutra_of_the_prophecy_by_dipamkara.xml
@@ -10,20 +10,21 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryadīpaṃkaravyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mar me mdzad kyis lung bstan pa zhe bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-061-008-1">Sakya Pandita Translation Group</author>
-                <consultant role="dharmaMaster" xml:id="UT22084-061-008-2">Ven. Khenpo Kalsang Gyaltsen</consultant>
-                <consultant role="projectManager" xml:id="UT22084-061-008-3">Rev. Dr. Ani Kunga Chodron</consultant>
-                <author role="translatorEng" xml:id="UT22084-061-008-4">Ven. Khenpo Kalsang Gyaltsen</author>
-                <author role="translatorEng" xml:id="UT22084-061-008-5">Rev. Dr. Ani Kunga Chodron</author>
+                <consultant role="dharmaMaster" xml:id="UT22084-061-008-2">Khenpo Kalsang Gyaltsen</consultant>
+                <consultant role="projectManager" xml:id="UT22084-061-008-3">Ani Kunga Chodron</consultant>
+                <author role="translatorEng" xml:id="UT22084-061-008-4">Khenpo Kalsang Gyaltsen</author>
+                <author role="translatorEng" xml:id="UT22084-061-008-5">Ani Kunga Chodron</author>
                 <author role="translatorEng" xml:id="UT22084-061-008-6">Laura Goetz</author>
                 <editor role="projectEditor" xml:id="UT22084-061-008-21">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-061-008-34">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-061-008"/>
                 <date/>
             </publicationStmt>
@@ -77,6 +78,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-28T12:35:36.836Z" type="text-version" status="0.0.9" xml:id="UT22084-061-008-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-28T12:36:32.064Z" type="text-version" status="0.0.10" xml:id="UT22084-061-008-35">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T08:13:15.356Z" type="translation-status" status="2.d" xml:id="UT22084-061-008-36">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T08:13:15.356Z" type="text-version" status="0.0.11" xml:id="UT22084-061-008-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
