--- a/translations/kangyur/placeholders/096-075_toh826,1103-verses_of_auspiciousness.xml
+++ b/translations/kangyur/placeholders/096-075_toh826,1103-verses_of_auspiciousness.xml
@@ -11,7 +11,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-075-5">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -32,7 +32,7 @@
                     <ref>Toh 1103</ref>
                     <biblScope>vol.101, ff.273r-274v(pp.545-548)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="101" start-page="545" end-page="548"/>
+                        <volume number="102" start-page="545" end-page="548"/>
                     </location>
                     <idno parent-id="O1JC114941JC20569" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12867" work="W22084"/>
@@ -52,6 +52,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T11:38:22.014Z" type="text-version" status="0.0.2" xml:id="UT22084-096-075-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T07:10:11.196Z" type="text-version" status="0.0.3" xml:id="UT22084-096-075-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
