--- a/translations/kangyur/placeholders/096-072_toh823,1106-auspiciousness_for_the_three_families.xml
+++ b/translations/kangyur/placeholders/096-072_toh823,1106-auspiciousness_for_the_three_families.xml
@@ -12,7 +12,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-072-10">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +35,7 @@
                     <biblScope>vol.101, ff.275v-275v(pp.550-550)</biblScope>
                     <author xml:lang="en" xml:id="UT22084-096-072-2">Anon</author>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="550" end-page="550"/>
+                        <volume number="102" start-page="550" end-page="550"/>
                     </location>
                     <idno parent-id="O1JC114941JC20569" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12870" work="W22084"/>
@@ -77,6 +77,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-04-16T08:52:23.347Z" type="text-version" status="0.0.3" xml:id="UT22084-096-072-13">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T07:33:07.69Z" type="text-version" status="0.0.4" xml:id="UT22084-096-072-14">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
