--- a/translations/kangyur/placeholders/101-163_toh1107-verses_expressing_auspiciousness.xml
+++ b/translations/kangyur/placeholders/101-163_toh1107-verses_expressing_auspiciousness.xml
@@ -13,7 +13,7 @@
                 <title xml:lang="en" type="otherTitle">[Note: from the 24th chapter of “The Play in Full” (Lalitavistara), Toh 95]</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -26,7 +26,7 @@
                     <biblScope>vol.101, ff.275v-278r(pp.550-555)</biblScope>
                     <author xml:lang="en" xml:id="UT22084-101-163-1">Anon</author>
                     <location work="UT4CZ5369" count-pages="6">
-                        <volume number="101" start-page="550" end-page="555"/>
+                        <volume number="102" start-page="550" end-page="555"/>
                     </location>
                     <idno parent-id="O1JC114941JC20569" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12871" work="W22084"/>
@@ -64,6 +64,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-03-14T15:53:38.93Z" type="text-version" status="0.0.3" xml:id="UT22084-101-163-9">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T07:33:37.563Z" type="text-version" status="0.0.4" xml:id="UT22084-101-163-10">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
