--- a/translations/kangyur/placeholders/088-034_toh539e,774,1074-the_incantation_of_the_polished_jewel.xml
+++ b/translations/kangyur/placeholders/088-034_toh539e,774,1074-the_incantation_of_the_polished_jewel.xml
@@ -10,16 +10,18 @@
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī, Polished Jewels</title>
                 <title type="otherTitle" xml:lang="en">[Note: the Tōhoku catalogue lists 7 short dhāraṇīs that it includes under the single Toh catalogue number, 539; this is the sixth.]</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rin po che bdar ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-088-034-1"/>
+                <author role="translatorMain" xml:id="UT22084-088-034-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-088-034-2">Catherine Dalton</author>
+                <editor role="projectEditor" xml:id="UT22084-088-034-15">Andreas Doctor</editor>
+                <editor role="copyEditor" xml:id="UT22084-088-034-16">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-088-034"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +84,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-05T09:01:37.842Z" type="text-version" status="0.0.7" xml:id="UT22084-088-034-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-05T09:03:57.683Z" type="text-version" status="0.0.8" xml:id="UT22084-088-034-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-08T08:38:35.716Z" type="translation-status" status="2.a" xml:id="UT22084-088-034-18">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-08T08:38:35.716Z" type="text-version" status="0.0.9" xml:id="UT22084-088-034-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
